Make sidebar list height to be 100% to prevent squishing the container and hiding the action menu. Add an actual repository creation in the ttyg view spec to prevent implementing stubs for all background requests that are unrelated with the ttyg view.

--- a/src/css/ttyg/agent-list.css
+++ b/src/css/ttyg/agent-list.css
@@ -1,5 +1,12 @@
+.agent-list-component {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
 .agent-list-component .agent-list {
     margin-top: 1rem;
+    height: 75vh;
     max-height: 75vh;
     overflow-y: auto;
 }
